Enable automated unit tests for GamingServicesKit
Summary: This just sets all the build rules no actual tests added with this change.

Differential Revision: D30412538

fbshipit-source-id: 1a0beb3a1d78b7c6e360658840292a0c3670f71c