@@ -38,6 +38,27 @@ dependencies {
 
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_ver"
+
+    // Unit Tests
+    testImplementation project(":facebook-testutil")
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'androidx.test:core:1.0.0'
+
+    testImplementation "org.mockito:mockito-inline:2.26.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+    def powerMockVersion = '2.0.2'
+    testImplementation "org.powermock:powermock-core:$powerMockVersion"
+    testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4-rule:$powerMockVersion"
+    testImplementation "org.powermock:powermock-classloading-xstream:$powerMockVersion"
+    testImplementation 'org.assertj:assertj-core:3.15.0'
+
+    testImplementation "com.android.installreferrer:installreferrer:1.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_ver"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_ver"
 }
 
 
@@ -69,6 +90,23 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    sourceSets {
+        test.java.srcDirs += 'src/test/kotlin'
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=1024m'
+            maxHeapSize = "4096m"
+            // CrashShieldHandlerDebugTest is only available on Sandcastle and Github Actions
+            // Because local compiling environment may recompile CrashShieldHandler multiple times
+            // and generate false signals
+            if (System.getenv("SANDCASTLE") != "1" && System.getenv("GITHUB_ACTIONS") != "1") {
+                exclude "com/facebook/internal/instrument/crashshield/CrashShieldHandlerDebugTest.class"
+            }
         }
     }
 }
